<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context="com.example.carlos_pc.contactos.MainActivity">

    <LinearLayout
        android:layout_marginTop="@dimen/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/lblNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_nombre"
            android:textSize="@dimen/label"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <DatePicker
            android:id="@+id/dpCalendario"
            android:layout_width="250dp"
            android:layout_height="180dp"
            android:datePickerMode="spinner"
            android:calendarViewShown="false">
        </DatePicker>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/top"
       >
        <TextView
            android:id="@+id/lblTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_telefono"
            android:textSize="@dimen/label"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edtTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="@dimen/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

       >

        <TextView
            android:id="@+id/lblEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_email"
            android:textSize="@dimen/label"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/top"
        >

        <TextView
            android:id="@+id/lblDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_descripcion"
            android:textSize="@dimen/label"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edtDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/top">
        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="Continuar"
            android:textStyle="bold"/>
    </LinearLayout>


</LinearLayout>
